Add more on evaluation methods

--- a/src/eco.bib
+++ b/src/eco.bib
@@ -11,6 +11,73 @@
   langid = {english}
 }
 
+@article{Chernozhukov2018DoubleDebiasedMachine,
+  title = {Double/{{Debiased Machine Learning}} for {{Treatment}} and {{Structural Parameters}}},
+  author = {Chernozhukov, Victor and Chetverikov, Denis and Demirer, Mert and Duflo, Esther and Hansen, Christian and Newey, Whitney and Robins, James},
+  year = 2018,
+  month = feb,
+  journal = {The Econometrics Journal},
+  volume = {21},
+  number = {1},
+  pages = {C1-C68},
+  issn = {1368-4221, 1368-423X},
+  doi = {10.1111/ectj.12097},
+  urldate = {2025-10-21},
+  copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+  langid = {english},
+  file = {C:\Users\moren\Zotero\storage\IEEMCBH3\Chernozhukov et al. - 2018 - Doubledebiased machine learning for treatment and structural parameters.pdf}
+}
+
+@misc{Bischl2021OpenMLBenchmarkingSuites,
+  title = {{{OpenML Benchmarking Suites}}},
+  author = {Bischl, Bernd and Casalicchio, Giuseppe and Feurer, Matthias and Gijsbers, Pieter and Hutter, Frank and Lang, Michel and Mantovani, Rafael G. and van Rijn, Jan N. and Vanschoren, Joaquin},
+  year = 2021,
+  month = nov,
+  number = {arXiv:1708.03731},
+  eprint = {1708.03731},
+  primaryclass = {stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1708.03731},
+  urldate = {2025-10-21},
+  abstract = {Machine learning research depends on objectively interpretable, comparable, and reproducible algorithm benchmarks. We advocate the use of curated, comprehensive suites of machine learning tasks to standardize the setup, execution, and reporting of benchmarks. We enable this through software tools that help to create and leverage these benchmarking suites. These are seamlessly integrated into the OpenML platform, and accessible through interfaces in Python, Java, and R. OpenML benchmarking suites (a) are easy to use through standardized data formats, APIs, and client libraries; (b) come with extensive meta-information on the included datasets; and (c) allow benchmarks to be shared and reused in future studies. We then present a first, carefully curated and practical benchmarking suite for classification: the OpenML Curated Classification benchmarking suite 2018 (OpenML-CC18). Finally, we discuss use cases and applications which demonstrate the usefulness of OpenML benchmarking suites and the OpenML-CC18 in particular.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {C\:\\Users\\moren\\Zotero\\storage\\DKC6ZVHF\\Bischl et al. - 2021 - OpenML Benchmarking Suites.pdf;C\:\\Users\\moren\\Zotero\\storage\\X9BUMYL8\\1708.html}
+}
+
+@inproceedings{Deng2009ImageNetLargeScaleHierarchical,
+  title = {{{ImageNet}}: {{A Large-Scale Hierarchical Image Database}}},
+  shorttitle = {{{ImageNet}}},
+  booktitle = {2009 {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and {Kai Li} and {Li Fei-Fei}},
+  year = 2009,
+  month = jun,
+  pages = {248--255},
+  publisher = {IEEE},
+  address = {Miami, FL},
+  doi = {10.1109/CVPR.2009.5206848},
+  urldate = {2025-10-21},
+  isbn = {978-1-4244-3992-8}
+}
+
+@misc{Wang2019GLUEMultiTaskBenchmark,
+  title = {{{GLUE}}: {{A Multi-Task Benchmark}} and {{Analysis Platform}} for {{Natural Language Understanding}}},
+  shorttitle = {{{GLUE}}},
+  author = {Wang, Alex and Singh, Amanpreet and Michael, Julian and Hill, Felix and Levy, Omer and Bowman, Samuel R.},
+  year = 2019,
+  month = feb,
+  number = {arXiv:1804.07461},
+  eprint = {1804.07461},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1804.07461},
+  urldate = {2025-10-21},
+  abstract = {For natural language understanding (NLU) technology to be maximally useful, both practically and as a scientific object of study, it must be general: it must be able to process language in a way that is not exclusively tailored to any one specific task or dataset. In pursuit of this objective, we introduce the General Language Understanding Evaluation benchmark (GLUE), a tool for evaluating and analyzing the performance of models across a diverse range of existing NLU tasks. GLUE is model-agnostic, but it incentivizes sharing knowledge across tasks because certain tasks have very limited training data. We further provide a hand-crafted diagnostic test suite that enables detailed linguistic analysis of NLU models. We evaluate baselines based on current methods for multi-task and transfer learning and find that they do not immediately give substantial improvements over the aggregate performance of training a separate model per task, indicating room for improvement in developing general and robust NLU systems.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {C\:\\Users\\moren\\Zotero\\storage\\QBG2KYUS\\Wang et al. - 2019 - GLUE A Multi-Task Benchmark and Analysis Platform for Natural Language Understanding.pdf;C\:\\Users\\moren\\Zotero\\storage\\AT8HTPHW\\1804.html}
+}
+
 @article{Nikolov2022WritingTipsEconomics,
   title = {Writing {{Tips}} for {{Economics Research Papers}}:  2021-2022 {{Edition}}},
   author = {Nikolov, Plamen},
