--- a/src/slides/general-principles/intro-to-simulations.qmd
+++ b/src/slides/general-principles/intro-to-simulations.qmd
@@ -211,15 +211,36 @@ Other issues:
 #### Place of Simulations
 
 
-<span class="highlight">what if </span>
+<div class="rounded-box">
+
+Simulations: check every aspect of performance in a "lab" setting with many synthetic datasets
+
+</div>
+
+<br>
+
+- Lie somewhere between generic theory and specific real test datasets
+- Using different DGPs — poor person's version of generic theory, gives confidence for <span class="highlight">some</span> scenarios
+- Synthetic data $\Rightarrow$ full knowledge of target quantities $\Rightarrow$ can evaluate both causal and predictive methods
+
+#### Simulations as Evaluation Tools
+
+
+Simulations allow answering "what if" questions, e.g.:
+
+- Does this estimator actually work when tail conditions hold?
+- Does this inference method suffer size distortions when identification is irregular?  
+- Is there a big efficiency loss when using a more general estimator? 
 
 
 
-#### Evaluation
-
-
-
-
+#### Limitations of Simulations
+ 
+- Only as good as the DGPs used
+- Computationally expensive — challenging with algorithms that take a long time to train
+- Limited scope:
+  - Mostly useful with numerical data
+  - Reason: not clear how to write DGPs for image, text, etc.
 
 #### Other Uses: Motivating Tool
 
@@ -233,23 +254,26 @@ An easy clear simulation: good way of motivating a problem
  
 Example: figure from <span class="highlight">intro</span> of @Chernozhukov2018DoubleDebiasedMachine — danger of not using Neyman orthogonalization (left panel)
 
-#### Other Usage
+#### Monte Carlo vs. Other Kinds of Simulations
+
+<div class="left-color">
+
+Our focus: Monte Carlo simulations
+
+</div>
+
+MC: drawing many random datasets and tabulating performance on the ensemble
+
+. . .
+
+<br>
 
 
-(see [this link](https://www.nvidia.com/en-us/use-cases/synthetic-data/) from Nvidia)
+Not the only kind of simulations. Contrast with 
 
-#### "Monte Carlo" vs. Other Simulations
+- Deterministic simulations
+- Synthetic data generation for training data augmentation (see [this link](https://www.nvidia.com/en-us/use-cases/synthetic-data/) from Nvidia)
 
-kinda the same
-
-#### Limitations of Simulations
-
-What
-
-
-not everything can be simulated (images, text)
-
-Or some models may also be intractable to train more than a few times
 
 
 ## Principles of Good Simulations {background="#00100F"}
@@ -259,10 +283,17 @@ Or some models may also be intractable to train more than a few times
 #### Reproducibility
 
 
+Intuitively: simulations are like crash-testing cars in a lab vs. on real roads.
+
+
 ## Anatomy of a Simulation {background="#00100F"}
  
 #### The Four Steps
 
+
+#### "Monte Carlo" and Other Simulations
+
+kinda the same
 
 
 ## Recap and Conclusions {background="#00100F"}
